# some-cpp-stuff

sandbox/: .gitmodules  CMakeLists.txt  README.md  build.sh
sandbox/libraries/glad/glad/: glad.c  glad.h
sandbox/libraries/sol/sol/: config.hpp  forward.hpp  sol.hpp
sandbox/sources/: main.cpp
sandbox/sources/tests/: imgui.cpp
test/: .gitmodules  CMakeLists.txt  build.sh  readme.md
test/assets/models/: booba.glb  moyai.glb  sphere.glb
test/assets/scripts/: main.lua
test/assets/shaders/: grid.glsl  main.glsl
test/libraries/glad/: glad.c
test/libraries/glad/glad/: glad.h
test/projects/untitled/: project.json
test/sandbox/: .gitmodules  CMakeLists.txt  README.md
test/sandbox/generators/: cube.lua  scene.lua
test/sandbox/libraries/glad/: glad.c
test/sandbox/libraries/glad/glad/: glad.h
test/sandbox/sources/: main.cpp  renderer.cpp  renderer.hpp
test/sources/: gui.cpp  gui.hpp  main.cpp  project.cpp  project.hpp  renderer.cpp  renderer.hpp  scripting.cpp  scripting.hpp  utility.cpp  utility.hpp
test/sources/old/: renderer.cpp  renderer.hpp  test.cpp
